--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@react-native-async-storage/async-storage": "1.23.1",
+    "@react-native-community/datetimepicker": "8.0.1",
     "@react-native-firebase/app": "^20.5.0",
     "@react-native-firebase/auth": "^20.5.0",
     "@react-navigation/native": "^6.1.18",
@@ -18,9 +20,10 @@
     "firebase": "^10.13.1",
     "react": "18.2.0",
     "react-native": "0.74.5",
+    "react-native-picker-select": "^9.3.1",
     "react-native-safe-area-context": "^4.11.0",
     "react-native-screens": "^3.34.0",
-    "@react-native-async-storage/async-storage": "1.23.1"
+    "@react-native-picker/picker": "2.7.5"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
