--- a/package.json
+++ b/package.json
@@ -48,9 +48,11 @@
     "@babel/preset-react": "^7.24.7",
     "@babel/preset-typescript": "^7.24.7",
     "@testing-library/jest-native": "^5.4.3",
+    "@testing-library/react-hooks": "^8.0.1",
     "@testing-library/react-native": "^12.7.2",
     "babel-jest": "^29.7.0",
     "jest": "^29.7.0",
+    "jest-fetch-mock": "^3.0.3",
     "metro-react-native-babel-preset": "^0.73.10",
     "react-test-renderer": "^18.2.0"
   },
